[package]
name = "yggdrasil-jumper"
version = "0.3.1"
edition = "2021"
authors = [ "Remy D. Farley <one-d-wide@protonmail.com>" ]
license = "GPL-3.0"
repository = "https://github.com/one-d-wide/yggdrasil-jumper"
default-run = "yggdrasil-jumper"

[[bin]]
name = "yggdrasil-jumper"

[[bin]]
name = "stun-test"

[dependencies]
bytecodec = "0.4"
bytes = { version = "1.5", features = [ "serde" ] }
clap = { version = "4.4", features = [ "derive" ] }
futures = { version = "0.3" }
rand = { version = "0.8", features = [ "std_rng" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
socket2 = { version = "0.5", features = [ "all" ] }
stun_codec = "0.3"
tokio-util = { version = "0.7", features = [ "full" ] }
tokio = { version = "1.33", features = [ "full" ] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
yggdrasilctl = { version = "1.2", default-features = false, features = [ "use_tokio" ] }
strum = "0.26"
strum_macros = "0.26"
itertools = "0.13"
