[package]
name = "yggdrasil-jumper"
version = "0.3.1"
edition = "2021"
authors = [ "Remy D. Farley <one-d-wide@protonmail.com>" ]
license = "GPL-3.0"
repository = "https://github.com/one-d-wide/yggdrasil-jumper"
default-run = "yggdrasil-jumper"

[[bin]]
name = "yggdrasil-jumper"

[[bin]]
name = "stun-test"

[dependencies]
bytecodec = "0.5"
bytes = { version = "1.10", features = [ "serde" ] }
clap = { version = "4.5", features = [ "derive" ] }
futures = { version = "0.3" }
rand = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
socket2 = { version = "0.6", features = [ "all" ] }
stun_codec = "0.4"
tokio-util = { version = "0.7", features = [ "full" ] }
tokio = { version = "1.47", features = [ "full" ] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
yggdrasilctl = { version = "1.2", default-features = false, features = [ "use_tokio" ] }
strum = "0.27"
strum_macros = "0.27"
itertools = "0.14"
