[package]
name = "yggdrasil-jumper"
version = "0.4.0"
edition = "2021"
authors = [ "Remy D. Farley <one-d-wide@protonmail.com>" ]
license = "GPL-3.0"
repository = "https://github.com/one-d-wide/yggdrasil-jumper"
default-run = "yggdrasil-jumper"

[[bin]]
name = "yggdrasil-jumper"

[[bin]]
name = "stun-test"

[dependencies]
bytecodec = "0.5"
clap = { version = "4.5", features = [ "derive" ] }
rand = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
socket2 = "0.6"
stun_codec = "0.4"
tokio = { version = "1.47", features = [ "net", "sync", "time", "signal", ] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
yggdrasilctl = { version = "1.2", default-features = false, features = [ "use_tokio" ] }
strum = "0.27"
strum_macros = "0.27"
kcp = "0"
